--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
-{% set name = "script-runner-gui" %}
-{% set version = "1.0.0" %}
+{% set name = "scriptrunner-gui" %}
+{% set version = "1.0.1" %}
 
 package:
   name: {{ name|lower }}
